# waydot-rs

./: .gitignore  AGENTS.md  Cargo.toml  Documento-Proyecto.md  LICENSE  README.md
.ai/skills/: implementador.json  implementador.md  project-manager.json  project-manager.md  sherlock.json  sherlock.md
data/: kaomojis.json  symbols.json
docs/: architecture.md
docs/decisions/: 0001-sync-docs-with-mvp.md  0002-background-and-shortcut-mvp.md  0003-tray-and-tab-shortcuts.md  0004-emoji-subtabs-and-gridview.md
src/: AGENTS.md  app.rs  config.rs  debug.rs  emoji_history.rs  main.rs  system.rs  tray.rs
src/clipboard/: AGENTS.md  history.rs  mod.rs  monitor.rs
src/data/: AGENTS.md  kaomojis.rs  mod.rs  symbols.rs
src/dbus/: AGENTS.md  background.rs  mod.rs  service.rs  shortcuts.rs
src/input/: AGENTS.md  mod.rs  native_injection.rs  wayland.rs  x11.rs
src/search/: AGENTS.md  mod.rs
src/ui/: AGENTS.md  clipboard_panel.rs  emoji_grid.rs  mod.rs  window.rs
